Actualización del Menú

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -44,7 +44,7 @@
         <!-- Sección de Cafetería -->
         <section class="cuadro-menu">
             <div class="contenedor-titulo-alimento">
-                <h4 class="titulo-cafeteria"><span>Cafeteria</span></h4>
+                <h4 class="titulos-alimentos cafeteria"><span>Cafeteria</span></h4>
             </div>
             <div class="row">
                 <div class="col-4">Cafe</div>
@@ -105,9 +105,9 @@
         <!-- Sección Sandwichs & Burgers -->
         <section class="cuadro-menu">
             <div class="contenedor-titulo-alimento">
-                <h4 class="titulo-sandwich"><span>Sandwichs & Burgers</span></h4>
+                <h4 class="titulos-alimentos sandwich-burger"><span>Sandwichs & Burgers</span></h4>
             </div>
-            <h4 class="sandwich"><span>sandwichs</span></h4>
+            <h4 class="titulo-sandwich"><span>sandwichs</span></h4>
             <div class="row">
                 <div class="col-4">Milanesa de Peceto</div>
                 <div class="col-4">____________________</div>
@@ -160,8 +160,61 @@
         </section>
         <!-- Fin Sección Sandwichs & Burgers -->
 
+        <!-- Sección  -->
         <section class="cuadro-menu">
+            <div class="contenedor-titulo-alimento">
+                <h4 class="titulos-alimentos ensaladas"><span>Ensaladas</span></h4>
+            </div>
+            <div class="row">
+                <div class="col-4">Caesar</div>
+                <div class="col-4">______________________________</div>
+                <div class="col-4">$4080</div>
+                <small>con pollo grillado, mix de lechuga, mix de quesos, croutones y aderezo caesar</small>
+            </div>
+            <div class="row">
+                <div class="col-4">Salmón</div>
+                <div class="col-4">_____________________________</div>
+                <div class="col-4">$5200</div>
+                <small>con rúcula y espinaca, cebolla morada, tomates confitados, queso finlandia, láminas de salmón ahumado, garrapiñada de sesamo y salsa teriyaki</small>
+            </div>
+            <div class="row">
+                <div class="col-4">Pura Vida</div>
+                <div class="col-4">____________________________</div>
+                <div class="col-4">$4080</div>
+                <small>mix verde, Champignones salteados, tomate asado, pickles de cebolla, láminas de zanahoria, palta, queso brie con vinagreta de pimentón</small>
+            </div>
 
+            <!-- Tartas -->
+            <div class="contenedor-titulo-alimento">
+                <h4 class="titulos-alimentos tartas"><span>Tartas</span></h4>
+            </div>
+            <div class="row">
+                <div class="col-4">Calabaza, Brie y Almendras</div>
+                <div class="col-4">_____________</div>
+                <div class="col-4">$3500</div>
+            </div>
+            <div class="row">
+                <div class="col-4">Brócoli, Bechamel y Parmesano</div>
+                <div class="col-4">__________</div>
+                <div class="col-4">$3500</div>
+            </div>
+            <!-- Fin Tartas -->
+
+            <!-- A Base de Plantas -->
+            <div class="contenedor-titulo-alimento">
+                <h4 class="titulos-alimentos base-plantas"><span>A Base de Plantas</span></h4>
+            </div>
+            <div class="row">
+                <div class="col-4">Hamburguesa Pura Vida</div>
+                <div class="col-4">________________</div>
+                <div class="col-4">$3800</div>
+                <small>medallón, guacamole, mix de lechugas, tomates asados y mayonesa de zanahoria</small>
+            </div>
+            <div class="row">
+                <div class="col-4 titulo-largo">Wrap de Tofu Marinado, Cebolla morada, Cherrys, Palta, Rúcula y Pesto de Cilantro</div>
+                <div class="col-4">_</div>
+                <div class="col-4">$3200</div>
+            </div>
         </section>
 
         <section class="cuadro-menu">
