--- a/pages/login.html
+++ b/pages/login.html
@@ -52,7 +52,7 @@
                 </div>
             </form>
     
-            <a href="./login.html"><button type="submit">ENTRAR</button></a>
+            <a href="./usuario-login.html"><button type="submit">ENTRAR</button></a>
         </div>
     </section>
 
