Avances en páginas de los Usuarios

--- a/pages/usuario-login.html
+++ b/pages/usuario-login.html
@@ -38,9 +38,9 @@
 
     <section class="usuario-login">
         <div class="usuario-cuadro">
-            <a href="./mesero.html">Mesero</a>
+            <a href="./users/mesero.html">Mesero</a>
             
-            <a href="./cocinero.html">Cocinero</a>
+            <a href="./users/cocinero.html">Cocinero</a>
         </div>
     </section>
 
