--- a/pages/users/mesero.html
+++ b/pages/users/mesero.html
@@ -12,26 +12,32 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Link de FontAwesome -->
+    <script src="https://kit.fontawesome.com/1fa3791580.js" crossorigin="anonymous"></script>
     <!-- Link de css -->
-    <link rel="stylesheet" href="../assets/css/styles.css">
-    <title>Usuario: Mesero</title>
+    <link rel="stylesheet" href="../../assets/css/styles.css">
+    <title>Mesas</title>
 </head>
 <body>
     <!-- Barra de Navegación -->
     <head>
-        <nav>
+        <nav class="navbar-usuario">
             <ul>
-                <li>Cerrar sesion</li>
-                <li>Mesas</li>
-                <li>Pedidos</li>
-                <li>Usuario</li>
+                <li><a href="./mesero.html">Plano</a></li>
+                <li><a href="./cocinero.html">Pedidos</a></li>
+                <li><a href="../../index.html">Cerrar Sesion</a></li>
             </ul>
         </nav>
     </head>
     <!-- Fin de la Barra de Navegación -->
     <hr>
-
-    <section></section>
+    
+    <section class="">
+        <h1>Plano del Restaurante</h1>
+        <div class="contenedor-mesas">
+            <i class="fa-solid fa-rectangle-list"></i>
+        </div>
+    </section>
 
 </body>
 </html>
