Terminación Página Mesero

--- a/pages/users/cocinero.html
+++ b/pages/users/cocinero.html
@@ -32,13 +32,29 @@
     <!-- Fin de la Barra de Navegación -->
     <hr>
     
-    <section class="">
+    <section class="pedidos-cocinero">
         <h1>Pedidos</h1>
         <div class="contenedor-cards">
-            <!-- Inicio de las cards -->
-            <figure>
-                
-            </figure>
+            <!-- Inicio de las card -->
+            <div class="card">
+                <h2>Mesa 1</h2>
+                <small>Tiempo</small>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="card">
+                <h2>Mesa 1</h2>
+                <small>Tiempo</small>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="card">
+                <h2>Mesa 1</h2>
+                <small>Tiempo</small>
+            </div>
+            <!-- Fin de la card -->
         </div>
     </section>
 
