--- a/pages/menu.html
+++ b/pages/menu.html
@@ -248,6 +248,38 @@
                 <div class="col-4 precio">$10200</div>
                 <small>salchicha alemana / bowl de mix de chips / bruschettas de salmón ahumado, queso crema y rúcula en pan de masa madre / tortilla de papas babé</small>
             </div>
+            <!-- Fin sección Brunch -->
+
+            <!-- Bebidas -->
+            <div class="contenedor-titulo-alimento">
+                <h4 class="titulos-alimentos tartas"><span>Bebidas</span></h4>
+            </div>
+            <div class="row">
+                <div class="col-4">Agua</div>
+                <div class="col-4">________________________________</div>
+                <div class="col-4 precio">$870</div>
+            </div>
+            <div class="row">
+                <div class="col-4">Agua C/ Gas</div>
+                <div class="col-4">__________________________</div>
+                <div class="col-4 precio">$870</div>
+            </div>
+            <div class="row">
+                <div class="col-4">Pepsi</div>
+                <div class="col-4">________________________________</div>
+                <div class="col-4 precio">$870</div>
+            </div>
+            <div class="row">
+                <div class="col-4">Mirinda</div>
+                <div class="col-4">______________________________</div>
+                <div class="col-4 precio">$870</div>
+            </div>
+            <div class="row">
+                <div class="col-4">Paso de los Toros</div>
+                <div class="col-4">_______________________</div>
+                <div class="col-4 precio">$870</div>
+            </div>
+            <!-- Fin Bebidas -->
         </section>
     </div>
 
