--- a/pages/users/cocinero.html
+++ b/pages/users/cocinero.html
@@ -34,25 +34,166 @@
     
     <section class="pedidos-cocinero">
         <h1>Pedidos</h1>
-        <div class="contenedor-cards">
+        <div class="contenedor-pedidos">
             <!-- Inicio de las card -->
-            <div class="card">
-                <h2>Mesa 1</h2>
-                <small>Tiempo</small>
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+    
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
             </div>
             <!-- Fin de la card -->
 
             <!-- Inicio de las card -->
-            <div class="card">
-                <h2>Mesa 1</h2>
-                <small>Tiempo</small>
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
             </div>
             <!-- Fin de la card -->
 
             <!-- Inicio de las card -->
-            <div class="card">
-                <h2>Mesa 1</h2>
-                <small>Tiempo</small>
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Fin de la card -->
+
+            <!-- Inicio de las card -->
+            <div class="cards">
+                <div class="barra-pedido">
+                    <h2>Mesa 1</h2>
+                    <small>Tiempo</small>
+                </div>
+                <hr>
+                <div class="pedido">
+                    <ul>
+                        <li>Milanesa de Peceto</li>
+                        <li>Agua</li>
+                        <li>Tarta: Calabaza, Brie y Almendras</li>
+                        <li>Mirinda</li>
+                    </ul>
+                </div>
             </div>
             <!-- Fin de la card -->
         </div>
