--- a/pages/users/mesero.html
+++ b/pages/users/mesero.html
@@ -24,7 +24,7 @@
         <nav class="navbar-usuario">
             <ul>
                 <li><a href="./mesero.html">Plano</a></li>
-                <li><a href="./cocinero.html">Pedidos</a></li>
+                <li><a href="./cocinero.html" disabled>Pedidos</a></li>
                 <li><a href="../../index.html">Cerrar Sesion</a></li>
             </ul>
         </nav>
@@ -54,7 +54,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa3">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 3</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -62,7 +62,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa4">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 4</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -70,7 +70,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa5">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 5</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -78,7 +78,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa6">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 6</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -86,7 +86,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa7">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 7</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -94,7 +94,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa8">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 8</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
@@ -102,7 +102,7 @@
             <!-- Inicio Mesa -->
             <div class="contenedor-mesas mesa9">
                 <div class="mesas">
-                    <button>Mesa 1</button>
+                    <button>Mesa 9</button>
                 </div>
             </div>
             <!-- Fin Mesa -->
