Estilos Finales al Proyecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- Link FontAwesome -->
     <script src="https://kit.fontawesome.com/1fa3791580.js" crossorigin="anonymous"></script>
     <!-- Aca va el link a google fonts -->
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet">
     <!-- Link del css -->
     <link rel="stylesheet" href="./assets/css/styles.css">
     <title>Inicio</title>
