--- a/pages/menu.html
+++ b/pages/menu.html
@@ -48,55 +48,55 @@
             </div>
             <div class="row">
                 <div class="col-4">Cafe</div>
-                <div class="col-4">_________________________________</div>
+                <div class="col-4">_____________________________</div>
                 <div class="col-4 precio">$780</div>
                 
             </div>
             <div class="row">
                 <div class="col-4">Lagrima</div>
-                <div class="col-4">______________________________</div>
+                <div class="col-4">__________________________</div>
                 <div class="col-4 precio">$860</div>
             </div>
             <div class="row">
                 <div class="col-4">Cortado</div>
-                <div class="col-4">______________________________</div>
+                <div class="col-4">__________________________</div>
                 <div class="col-4 precio">$850</div>
             </div>
             <div class="row">
                 <div class="col-4">Cafe con Leche</div>
-                <div class="col-4">_______________________</div>
+                <div class="col-4">___________________</div>
                 <div class="col-4 precio">$1240</div>
             </div>
             <div class="row">
                 <div class="col-4">Capuchino</div>
-                <div class="col-4">___________________________</div>
+                <div class="col-4">_______________________</div>
                 <div class="col-4 precio">$1240</div>
             </div>
             <div class="row">
                 <div class="col-4">Submarino</div>
-                <div class="col-4">___________________________</div>
+                <div class="col-4">_______________________</div>
                 <div class="col-4 precio">$1420</div>
             </div>
             <div class="row">
                 <div class="col-4">Chocolatada</div>
-                <div class="col-4">__________________________</div>
+                <div class="col-4">_____________________</div>
                 <div class="col-4 precio">$1250</div>
             </div>
             <br>
             <h4><span>té</span></h4>
             <div class="row">
                 <div class="col-4">Té en Saquito</div>
-                <div class="col-4">_________________________</div>
+                <div class="col-4">_____________________</div>
                 <div class="col-4 precio">$780</div>
             </div>
             <div class="row">
                 <div class="col-4">Té en Hebras</div>
-                <div class="col-4">_________________________</div>
+                <div class="col-4">____________________</div>
                 <div class="col-4 precio">$1320</div>
             </div>
             <div class="row">
                 <div class="col-4">Hebras p/Compartir</div>
-                <div class="col-4">____________________</div>
+                <div class="col-4">________________</div>
                 <div class="col-4 precio">$2540</div>
             </div>
         </section>
@@ -110,50 +110,50 @@
             <h4 class="titulo-sandwich"><span>sandwichs</span></h4>
             <div class="row">
                 <div class="col-4">Milanesa de Peceto</div>
-                <div class="col-4">____________________</div>
+                <div class="col-4">________________</div>
                 <div class="col-4 precio">$3900</div>
                 <small>con lechuga, tomate, huevo y mostaza antigua en pan ciabatta</small>
             </div>
             <div class="row">
                 <div class="col-4">Milanesa de Berenjenas</div>
-                <div class="col-4">________________</div>
+                <div class="col-4">____________</div>
                 <div class="col-4 precio">$3400</div>
                 <small>con queso gratinado, rúcula, tomates secos y pesto en pan ciabatta</small>
             </div>
             <div class="row">
                 <div class="col-4">Lomo Fileteado</div>
-                <div class="col-4">_______________________</div>
+                <div class="col-4">___________________</div>
                 <div class="col-4 precio">$3900</div>
                 <small>con cebollas y morrones asados, queso gratinado, lechuga y mayonesa en pan campo</small>
             </div>
             <div class="row">
                 <div class="col-4">Bondiola Braseada</div>
-                <div class="col-4">____________________</div>
+                <div class="col-4">________________</div>
                 <div class="col-4 precio">$3980</div>
                 <small>con cebolla morada encurtida, pickles de pepinos, salsa barbacoa en baguettin</small>
             </div>
             <div class="row">
                 <div class="col-4">Hongos Portobellos</div>
-                <div class="col-4">____________________</div>
+                <div class="col-4">________________</div>
                 <div class="col-4 precio">$3540</div>
                 <small>con queso parmesano, rúcula, tomates confitados y pesto en pan ciabatta multicereal</small>
             </div>
             <h4><span>burgers</span></h4>
             <div class="row">
                 <div class="col-4">Gringa</div>
-                <div class="col-4">______________________________</div>
+                <div class="col-4">__________________________</div>
                 <div class="col-4 precio">$3900</div>
                 <small>carne 160grs, triple cheddar, panceta crocante, pickles de pepinos y salsa tasty</small>
             </div>
             <div class="row">
                 <div class="col-4">Argenta</div>
-                <div class="col-4">_____________________________</div>
+                <div class="col-4">_________________________</div>
                 <div class="col-4 precio">$4040</div>
                 <small>carne 160grs, provoleta, morrón asado y salsa criolla</small>
             </div>
             <div class="row">
                 <div class="col-4">Insta</div>
-                <div class="col-4">________________________________</div>
+                <div class="col-4">___________________________</div>
                 <div class="col-4 precio">$4240</div>
                 <small>carne 160grs, queso gruyere, hongos grillados, panceta, rúcula, mostaza y ketchup</small>
             </div>
@@ -167,19 +167,19 @@
             </div>
             <div class="row">
                 <div class="col-4">Caesar</div>
-                <div class="col-4">______________________________</div>
+                <div class="col-4">__________________________</div>
                 <div class="col-4 precio">$4080</div>
                 <small>con pollo grillado, mix de lechuga, mix de quesos, croutones y aderezo caesar</small>
             </div>
             <div class="row">
                 <div class="col-4">Salmón</div>
-                <div class="col-4">_____________________________</div>
+                <div class="col-4">_________________________</div>
                 <div class="col-4 precio">$5200</div>
                 <small>con rúcula y espinaca, cebolla morada, tomates confitados, queso finlandia, láminas de salmón ahumado, garrapiñada de sesamo y salsa teriyaki</small>
             </div>
             <div class="row">
                 <div class="col-4">Pura Vida</div>
-                <div class="col-4">____________________________</div>
+                <div class="col-4">_______________________</div>
                 <div class="col-4 precio">$4080</div>
                 <small>mix verde, Champignones salteados, tomate asado, pickles de cebolla, láminas de zanahoria, palta, queso brie con vinagreta de pimentón</small>
             </div>
@@ -190,12 +190,12 @@
             </div>
             <div class="row">
                 <div class="col-4">Calabaza, Brie y Almendras</div>
-                <div class="col-4">_____________</div>
+                <div class="col-4">_________</div>
                 <div class="col-4 precio">$3500</div>
             </div>
             <div class="row">
                 <div class="col-4">Brócoli, Bechamel y Parmesano</div>
-                <div class="col-4">__________</div>
+                <div class="col-4">______</div>
                 <div class="col-4 precio">$3500</div>
             </div>
             <!-- Fin Tartas -->
@@ -206,13 +206,13 @@
             </div>
             <div class="row">
                 <div class="col-4">Hamburguesa Pura Vida</div>
-                <div class="col-4">________________</div>
+                <div class="col-4">____________</div>
                 <div class="col-4 precio">$3800</div>
                 <small>medallón, guacamole, mix de lechugas, tomates asados y mayonesa de zanahoria</small>
             </div>
             <div class="row">
                 <div class="col-4 titulo-largo">Wrap de Tofu Marinado, Cebolla morada, Cherrys, Palta, Rúcula y Pesto de Cilantro</div>
-                <div class="col-4">____</div>
+                <div class="col-4">_______</div>
                 <div class="col-4 precio">$3200</div>
             </div>
             <!-- Fin A Base de Plantas -->
@@ -226,25 +226,25 @@
             </div>
             <div class="row">
                 <div class="col-4">Despierta</div>
-                <div class="col-4">____________________________</div>
+                <div class="col-4">________________________</div>
                 <div class="col-4 precio">$9500</div>
                 <small>tostado en pan de campo / huevo revuelto con panceta y tostadas de pan de molde / trifle / porción de torta</small>
             </div>
             <div class="row">
                 <div class="col-4">Sé Feliz</div>
-                <div class="col-4">_____________________________</div>
+                <div class="col-4">_________________________</div>
                 <div class="col-4 precio">$9500</div>
                 <small>bowl de yogurt, granola y frutas de estación / tostón con huevo revuelto y palta / sandwich de masa madre con queso y tomate / budín a elección</small>
             </div>
             <div class="row">
                 <div class="col-4">Canta</div>
-                <div class="col-4">_______________________________</div>
+                <div class="col-4">___________________________</div>
                 <div class="col-4 precio">$9900</div>
                 <small>tostón avocado / bowl de yogurt con granola y frutas de estación / scons con jamón crudo y queso crema con ciboulette / tostadas con queso crema y mermelada / muffins a elección</small>
             </div>
             <div class="row">
                 <div class="col-4">Ríe</div>
-                <div class="col-4">________________________________</div>
+                <div class="col-4">____________________________</div>
                 <div class="col-4 precio">$10200</div>
                 <small>salchicha alemana / bowl de mix de chips / bruschettas de salmón ahumado, queso crema y rúcula en pan de masa madre / tortilla de papas babé</small>
             </div>
@@ -252,31 +252,31 @@
 
             <!-- Bebidas -->
             <div class="contenedor-titulo-alimento">
-                <h4 class="titulos-alimentos tartas"><span>Bebidas</span></h4>
+                <h4 class="titulos-alimentos bebidas"><span>Bebidas</span></h4>
             </div>
             <div class="row">
                 <div class="col-4">Agua</div>
-                <div class="col-4">________________________________</div>
+                <div class="col-4">____________________________</div>
                 <div class="col-4 precio">$870</div>
             </div>
             <div class="row">
                 <div class="col-4">Agua C/ Gas</div>
-                <div class="col-4">__________________________</div>
+                <div class="col-4">______________________</div>
                 <div class="col-4 precio">$870</div>
             </div>
             <div class="row">
                 <div class="col-4">Pepsi</div>
-                <div class="col-4">________________________________</div>
+                <div class="col-4">____________________________</div>
                 <div class="col-4 precio">$870</div>
             </div>
             <div class="row">
                 <div class="col-4">Mirinda</div>
-                <div class="col-4">______________________________</div>
+                <div class="col-4">__________________________</div>
                 <div class="col-4 precio">$870</div>
             </div>
             <div class="row">
                 <div class="col-4">Paso de los Toros</div>
-                <div class="col-4">_______________________</div>
+                <div class="col-4">__________________</div>
                 <div class="col-4 precio">$870</div>
             </div>
             <!-- Fin Bebidas -->
