--- a/pages/users/cocinero.html
+++ b/pages/users/cocinero.html
@@ -56,7 +56,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 2</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -74,7 +74,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 3</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -92,7 +92,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 4</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -110,7 +110,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 5</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -128,7 +128,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 6</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -146,7 +146,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 7</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -164,7 +164,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa 8</h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
@@ -182,7 +182,7 @@
             <!-- Inicio de las card -->
             <div class="cards">
                 <div class="barra-pedido">
-                    <h2>Mesa 1</h2>
+                    <h2>Mesa </h2>
                     <small>Tiempo</small>
                 </div>
                 <hr>
