Arreglos de Estilos Página Login

--- a/pages/login.html
+++ b/pages/login.html
@@ -14,8 +14,6 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Link de css -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <!-- Link de css para login -->
-    <link rel="stylesheet" href="../assets/css/login.css">
     <title>Login</title>
 </head>
 <body>
@@ -38,7 +36,7 @@
     
     <hr>
 
-    <section class="container">
+    <section class="container-login">
         <div class="cuadro-login">
             <h2>Login</h2>
             <form>
