Ultimos arreglos a las páginas

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         <h2>Redes Sociales</h2>
         <p>Si queres, podes seguirnos en nuestras redes!</p>
         <ul>
-            <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></i></a></li>
-            <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-            <li><a href="https://twitter.com"><i class="fa-brands fa-x-twitter"></i></a></li>
+            <li><a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></i></a></li>
+            <li><a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="https://twitter.com" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></li>
         </ul>
     </footer>
 </body>
