--- a/pages/reservacion.html
+++ b/pages/reservacion.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../assets/css/reserva.css">
     <title>Reservacion</title>
 </head>
-<body>
+<body class="body-reserva">
     <!-- Inicio del header -->
     <header>
         <!-- Inicio Barra Navegación -->
